// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstMongo.ts mongoose-integer with negative integer 1`] = `[ValidationError: Aor validation failed: max_contacts: Path \`max_contacts\` (-1) is less than minimum allowed value (0).]`;

exports[`AstMongo.ts mongoose-integer with real number 1`] = `[ValidationError: Aor validation failed: max_contacts: Error, expected \`max_contacts\` to be an integer. Value: \`1.23\`]`;

exports[`AstMongo.ts with Aor aor Check if it has been removed 1`] = `null`;

exports[`AstMongo.ts with Aor aor Create an Aor with valid record 1`] = `
Object {
  "__v": 0,
  "_id": "alice",
  "contact": "sip:6001@192.0.2.1:5060",
  "max_contacts": 1,
}
`;

exports[`AstMongo.ts with Aor aor Read it again 1`] = `
Object {
  "__v": 0,
  "_id": "alice",
  "contact": "sip:6001@192.0.2.1:5060",
  "max_contacts": 2,
}
`;

exports[`AstMongo.ts with Aor aor Read it back 1`] = `
Object {
  "__v": 0,
  "_id": "alice",
  "contact": "sip:6001@192.0.2.1:5060",
  "max_contacts": 1,
}
`;

exports[`AstMongo.ts with Aor aor Read it back 2`] = `
Object {
  "__v": 0,
  "_id": "alice",
  "contact": "sip:6001@192.0.2.1:5060",
  "max_contacts": 1,
}
`;

exports[`AstMongo.ts with Aor aor Update it 1`] = `
Object {
  "n": 1,
  "nModified": 1,
  "ok": 1,
}
`;

exports[`AstMongo.ts with Cdr & Cel cdr Read them back 1`] = `
Array [
  Object {
    "__v": 0,
    "accountcode": "",
    "amaflags": "DOCUMENTATION",
    "answer": 1970-01-01T00:00:00.000Z,
    "billsec": 0,
    "channel": "PJSIP/6002-00000000",
    "clid": "6002 <6002>",
    "dcontext": "context1",
    "disposition": "NO ANSWER",
    "dst": "6001",
    "dstchannel": "PJSIP/6001-00000001",
    "duration": 0,
    "end": 2017-01-01T08:57:57.262Z,
    "lastapp": "Dial",
    "lastdata": "PJSIP/6001",
    "linkedid": "asterisk-0.0",
    "peeraccount": "",
    "sequence": 0,
    "src": "6002",
    "start": 2017-01-01T08:57:57.241Z,
    "uniqueid": "asterisk-0.0",
    "userfield": "",
  },
  Object {
    "__v": 0,
    "accountcode": "",
    "amaflags": "DOCUMENTATION",
    "answer": 1970-01-03T00:00:00.000Z,
    "billsec": 0,
    "channel": "PJSIP/6004-00000000",
    "clid": "6004 <6004>",
    "dcontext": "context1",
    "disposition": "NO ANSWER",
    "dst": "6003",
    "dstchannel": "PJSIP/6003-00000001",
    "duration": 0,
    "end": 2017-01-03T08:57:58.262Z,
    "lastapp": "Dial",
    "lastdata": "PJSIP/6003",
    "linkedid": "asterisk-0.0",
    "peeraccount": "",
    "sequence": 0,
    "src": "6004",
    "start": 2017-01-03T08:57:58.241Z,
    "uniqueid": "asterisk-0.0",
    "userfield": "",
  },
]
`;

exports[`AstMongo.ts with Cdr & Cel cel Read log 1`] = `
Array [
  Object {
    "__v": 0,
    "accountcode": "",
    "appdata": "",
    "appname": "",
    "channame": "PJSIP/6002-00000004",
    "cid_ani": "",
    "cid_dnid": "",
    "cid_name": "",
    "cid_num": "6002",
    "cid_rdnis": "",
    "context": "context1",
    "eventname": "CHAN_START",
    "eventtime": 2017-01-01T09:12:17.629Z,
    "eventtype": 1,
    "exten": "6001",
    "extra": "",
    "linkedid": "asterisk-0.4",
    "peer": "",
    "peeraccount": "",
    "uniqueid": "asterisk-0.4",
    "userfield": "",
  },
  Object {
    "__v": 0,
    "accountcode": "",
    "appdata": "PJSIP/6001",
    "appname": "Dial",
    "channame": "PJSIP/6002-00000004",
    "cid_ani": "6002",
    "cid_dnid": "",
    "cid_name": "",
    "cid_num": "6002",
    "cid_rdnis": "",
    "context": "context1",
    "eventname": "APP_START",
    "eventtime": 2017-01-01T09:12:17.630Z,
    "eventtype": 5,
    "exten": "6001",
    "extra": "",
    "linkedid": "asterisk-0.4",
    "peer": "",
    "peeraccount": "",
    "uniqueid": "asterisk-0.4",
    "userfield": "",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set add an identify as realtime resources 1`] = `
Array [
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.11",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set add an identify as realtime resources 2`] = `
Array [
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.11",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set add multiple identifis as realtime resources 1`] = `
Array [
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.12",
  },
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.13",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set add multiple identifis as realtime resources 2`] = `
Array [
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.11",
  },
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.12",
  },
  Object {
    "__v": 0,
    "endpoint": "my_realtime_trunk",
    "match": "203.0.113.13",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set clean up #1 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "6002",
    "allow": "ulaw",
    "aors": "6002",
    "auth": "6002",
    "context": "default",
    "transport": "transport-udp",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set clean up #1 2`] = `
Array [
  Object {
    "__v": 0,
    "_id": "6002",
    "contact": "sip:6002@192.0.2.2:5060",
    "max_contacts": 1,
  },
]
`;

exports[`AstMongo.ts with Endpoint Set clean up #1 3`] = `
Array [
  Object {
    "__v": 0,
    "_id": "6002",
    "auth_type": "userpass",
    "md5_cred": "51e63a3da6425a39aecc045ec45f1ae8",
    "username": "6002",
  },
]
`;

exports[`AstMongo.ts with Endpoint Set clean up #2 1`] = `Array []`;

exports[`AstMongo.ts with Endpoint Set clean up #2 2`] = `Array []`;

exports[`AstMongo.ts with Endpoint Set clean up #2 3`] = `Array []`;

exports[`AstMongo.ts with Endpoint Set clean up #3 1`] = `Array []`;

exports[`AstMongo.ts with Endpoint Set create an endpoint set #1 1`] = `
Object {
  "__v": 0,
  "_id": "6001",
  "allow": "ulaw",
  "aors": "6001",
  "auth": Object {
    "__v": 0,
    "_id": "6001",
    "auth_type": "userpass",
    "password": "6001",
    "username": "6001",
  },
  "context": "default",
  "transport": "simpletrans",
}
`;

exports[`AstMongo.ts with Endpoint Set create an endpoint set #2 1`] = `
Object {
  "__v": 0,
  "_id": "6001",
  "allow": "ulaw",
  "aors": "6001",
  "auth": Object {
    "__v": 0,
    "_id": "6001",
    "auth_type": "userpass",
    "password": "6001",
    "username": "6001",
  },
  "context": "default",
  "transport": "simpletrans",
}
`;

exports[`AstMongo.ts with StaticConfig add dial plans as StaticConfigs 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 0,
    "var_name": "exten",
    "var_val": "_6.,1,NoOp()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 1,
    "var_name": "exten",
    "var_val": "_6.,n,Dial(PJSIP/\${EXTEN})",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 2,
    "var_name": "exten",
    "var_val": "_6.,n,Hangup()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 3,
    "var_name": "exten",
    "var_val": "_7.,1,NoOp()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 4,
    "var_name": "exten",
    "var_val": "_7.,n,Dial(PJSIP/\${EXTEN})",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 5,
    "var_name": "exten",
    "var_val": "_7.,n,Hangup()",
  },
]
`;

exports[`AstMongo.ts with StaticConfig add identify as StaticConfigs 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "endpoint",
    "var_val": "my_static_trunk",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "match",
    "var_val": "203.0.113.1",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "match",
    "var_val": "203.0.113.2",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 3,
    "var_name": "match",
    "var_val": "203.0.113.3",
  },
]
`;

exports[`AstMongo.ts with StaticConfig add transports as StaticConfigs 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "tcp",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "wss",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
]
`;

exports[`AstMongo.ts with StaticConfig create a transport as StaticConfigs 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "udp",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
]
`;

exports[`AstMongo.ts with StaticConfig delete extensions 1`] = `
Object {
  "n": 6,
  "ok": 1,
}
`;

exports[`AstMongo.ts with StaticConfig delete pjsip 1`] = `
Object {
  "n": 13,
  "ok": 1,
}
`;

exports[`AstMongo.ts with StaticConfig read back extensions 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 0,
    "var_name": "exten",
    "var_val": "_6.,1,NoOp()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 1,
    "var_name": "exten",
    "var_val": "_6.,n,Dial(PJSIP/\${EXTEN})",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 2,
    "var_name": "exten",
    "var_val": "_6.,n,Hangup()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 3,
    "var_name": "exten",
    "var_val": "_7.,1,NoOp()",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 4,
    "var_name": "exten",
    "var_val": "_7.,n,Dial(PJSIP/\${EXTEN})",
  },
  Object {
    "__v": 0,
    "cat_metric": 2,
    "category": "context1",
    "commented": 0,
    "filename": "extensions.conf",
    "var_metric": 5,
    "var_name": "exten",
    "var_val": "_7.,n,Hangup()",
  },
]
`;

exports[`AstMongo.ts with StaticConfig read back pjsip 1`] = `
Array [
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "udp",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "tcp",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "wss",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "endpoint",
    "var_val": "my_static_trunk",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "match",
    "var_val": "203.0.113.1",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "match",
    "var_val": "203.0.113.2",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 3,
    "var_name": "match",
    "var_val": "203.0.113.3",
  },
]
`;

exports[`AstMongo.ts with StaticConfig read back to check #2 1`] = `
Array [
  Object {
    "__cat_metric": Object {
      "id": "000000000000000000000001",
      "value": 5,
    },
    "__v": 0,
  },
]
`;

exports[`AstMongo.ts with StaticConfig read back to check 1`] = `
Array [
  Object {
    "__cat_metric": Object {
      "id": "000000000000000000000001",
      "value": 5,
    },
    "__v": 0,
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "udp",
  },
  Object {
    "__v": 0,
    "cat_metric": 1,
    "category": "transport-udp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "tcp",
  },
  Object {
    "__v": 0,
    "cat_metric": 3,
    "category": "transport-tcp",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "type",
    "var_val": "transport",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "protocol",
    "var_val": "wss",
  },
  Object {
    "__v": 0,
    "cat_metric": 4,
    "category": "transport-wss",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "bind",
    "var_val": "0.0.0.0",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 0,
    "var_name": "endpoint",
    "var_val": "my_static_trunk",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 1,
    "var_name": "match",
    "var_val": "203.0.113.1",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 2,
    "var_name": "match",
    "var_val": "203.0.113.2",
  },
  Object {
    "__v": 0,
    "cat_metric": 5,
    "category": "identify",
    "commented": 0,
    "filename": "pjsip.conf",
    "var_metric": 3,
    "var_name": "match",
    "var_val": "203.0.113.3",
  },
]
`;
